# cannelloni

./: .gitignore  CMakeLists.txt  README.md  can.h  cannelloni.cpp  cannelloni.h  canthread.cpp  canthread.h  config.h.cmake  connection.cpp  connection.h  csvmapparser.h  decoder.cpp  decoder.h  default.nix  flake.nix  framebuffer.cpp  framebuffer.h  inet_address.cpp  inet_address.h  logging.h  make_unique.h  parser.cpp  parser.h  sctpthread.cpp  sctpthread.h  shell.nix  tcp_client_thread.cpp  tcp_server_thread.cpp  tcpthread.cpp  tcpthread.h  thread.cpp  thread.h  timer.cpp  timer.h  udpthread.cpp  udpthread.h
.github/: FUNDING.yml
.github/workflows/: nix-test.yml  release-drafter.yml
doc/: tcp_protocol.md  udp_format.md
nix/: module.nix  overlay.nix  package.nix
nix/tests/: common.nix  sctp.nix  tcp.nix  udp.nix
tests/: candump_compare.py
